--- a/index.html
+++ b/index.html
@@ -1,4 +1,10 @@
-Rudy Recommends:<br/>
+<b>Rudy Recommends</b>:<br/>
 Storks
 <br/>
 Large Elegant Wooden Gates
+<br/>
+Efficiency
+<br/>
+Bolded Titles
+<br/>
+All large wooden things (not small wooden things though)
