--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
-<b>Rudy Recommends</b>:<br/>
-Storks
+Rudy Recommends:<br/>
+<b>Storks</b>
 <br/>
 Large Elegant Wooden Gates
 <br/>
 Efficiency
 <br/>
-Bolded Titles
+Bolded <b>Titles</b>
 <br/>
 All large wooden things (not small wooden things though)
