--- a/index.html
+++ b/index.html
@@ -9,4 +9,4 @@ Bolded <b>Titles</b>
 <br/>
 All large wooden things (not small wooden things though)
 <br/>
-Newer versions of Angular.js
+Newer versions of Angular<del>.js</del>
